Changed Nav to a hyperlink

--- a/Index.html
+++ b/Index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="./style.css">
+        <title>The Title</title>
     </head>
     <body>
         <nav id="banner">
-            <img  src="./images/SnowBannerHQ.png" alt="Snow Banner">
+            <a href="./SecondPage.html"><img src="./images/SnowBannerHQ.png"> </a>
             <a href="./SecondPage.html" class="button">Apply Now</a>
             <a href="./SecondPage.html" class="button">Request info</a>
         </nav>
